<resources>
    <string name="app_name">Procrasti Mate</string>

    <string name="home_unlock">PHONE IS UNLOCKED</string>

    <string name="dialog_title">Popup Dialog</string>
    <string name="dialog_message">Can you grant permission to check network status?</string>
    <string name="kioskphonelock">PHONE IS LOCKED</string>
    <string name="time_left">02H:02M:02S</string>
    <string name="lock_phone">LOCK</string>
    <string name="unlock_phone">UNLOCK</string>
    <string name="phone">Phone</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="kiosk">Unlock Phone</string>
    <string name="phone_usage_limit">Phone Usage Limit (HH:MM)</string>
    <string name="lockout_time">Lockout Time (HH:MM)</string>
    <string name="lockout_time_default">1</string>
    <string name="trivia_categories">Trivia Categories</string>
    <string name="trivia_categories_default">Any</string>
    <string name="trivia_style">Challenge Style</string>
    <string name="trivia_style_default">Trivia</string>
    <string name="exitButton">Exit Button</string>

    <string name="CameraPermissionTitle">Permission Request</string>
    <string name="CameraPermissionRequest">Permission to access your camera</string>
    <string name="CameraPermissionRequestRationale">Camera access needed if you want to access your phone while your phone is locked</string>
    <string name="UsageStatisticsTitle">Permission Request</string>
    <string name="UsageStatisticsPermissionRequest">Permission to view phone usage statistics critical for best user experience</string>
    <string name="UsageStatisticsPermissionRational">We need to view your phone usage stastics to provide you with the best user experience</string>
    <string name="UsageStatisticsPermissionRationalStats">We need to view your phone usage stastics in order for the statistics page to function</string>
    <string name="PhoneTitle">Permission Request</string>
    <string name="PhonePermissionRequest">"Permission to access phone calling functionality"</string>
    <string name="PhonePermissionRational">"Phone access needed if you want to make calls while your phone is locked"</string>

    <string name="OverlayTitle"> Permission Request</string>
    <string name="OverlayRequestRationale"> In order to lock phone, overlay permission to allow app to be on top of everything must be granted</string>
    <string name="text_size">Text Size</string>
    <!--<string name="kiosk_mode">Kiossk Mode Activity</string>-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string name="notification_title">You are over your phone usage limit.</string>
    <string name="notification_content">ProcrastiMate wants to lock your phone.</string>
    <string name="channel_name">Usage notification.</string>
    <string name="channel_description">Notification for when you go over your usage limit.</string>



    <!-- general -->
    <string name="question">What is the answer for this flashcard?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <!-- review activity menu -->
    <string name="add_new_card">Add New Card</string>
    <string name="edit_current_card">Edit Current Card</string>
    <string name="delete_current_card">Delete Current Card</string>
    <string name="open_deck_browser">Open Deck Browser</string>
    <string name="deck_options">Deck Options</string>

    <!-- deck browser menu -->
    <string name="search_card">Search Card</string>
    <!--<string name="add_new_card">Add New Card</string>-->
    <string name="shuffle_deck">Shuffle Deck</string>
    <string name="reverse_deck">Reverse Card Order</string>
    <string name="reset_card_strength">Reset Card Strength</string>

    <!-- review activity dialogs -->
    <string name="deck_could_not_be_loaded">Deck could not be loaded.</string>
    <string name="front_is_empty">Front is empty.</string>
    <string name="back_is_empty">Back is empty.</string>
    <string name="really_delete_card">Do you really want to delete this card?</string>
    <string name="cannot_delete_last_card">The last card can\'t be deleted!</string>
    <string name="activate_tts_new_deck">Activate Text-to-Speech?</string>
    <string name="want_activate_tts">Read answers aloud during learning?</string>

    <!-- deck list dialogs -->
    <string name="collection_could_not_be_loaded">Unable to load deck collection.</string>
    <string name="flashcards_could_not_be_loaded">Unable to load flashcards because there are no available decks.</string>
    <string name="new_deck">New Deck</string>
    <string name="illegal_deck_name">Illegal deck name.</string>
    <string name="deck_already_exists">A deck \"%1$s\" already exists!</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="study_deck">Select Deck For Studying</string>
    <string name="really_delete_deck">Do you really want to delete \"%1$s\"?</string>
    <string name="really_study_deck">Do you really want to be tested on this deck \"%1$s\"?</string>

    <!-- deck browser dialogs -->
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="be_tested_on_current_deck_dialog">Do you really want to be tested on this disk when you are unlocking your phone</string>
    <string name="really_shuffle_deck">Do you really want to shuffle the deck?</string>
    <string name="really_reverse_deck">Do you really want to reverse the order of the cards?</string>
    <string name="really_reset_strength">Reset the strength of all cards?</string>
    <string name="yes_level_0">Yes, all cards Level 0</string>
    <string name="yes_level_2">Yes, all cards Level 2</string>
    <string name="share_deck">Share Deck</string>
    <string name="shared_stacksrs_deck">Shared StackSRS deck: %1$s</string>

    <!-- deck download dialogs -->
    <string name="could_not_load_deck_list_from_server">Could not load deck list from server.</string>
    <string name="could_not_connect_to_server">Could not connect to server. Are you online?</string>
    <string name="deck_exists_please_rename">A deck \"%1$s\" already exists. Please delete it or rename it.</string>
    <string name="really_download_deck">Do you want to download the deck \"%1$s\"?</string>
    <string name="downloaded_deck">Downloaded \"%1$s\".</string>
    <string name="could_not_load_deck">Could not load deck.</string>
    <string name="downloading_deck_failed">Downloading the deck failed. Are you online?</string>

    <!-- review activity layout -->
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="speak_answer">Speak</string>
    <string name="show_answer">Show Answer</string>

    <!-- deck list layout -->
    <string name="create_new_deck">Create New Deck</string>
    <string name="download_deck">Download Deck</string>

    <!-- dialog layouts -->
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="deck_name">Deck Name</string>
    <string name="language_back">Back Language (e.g. \"en\")</string>
    <string name="accent_optional">Accent (e.g. \"US\", \"GB\")</string>
    <string name="read_back_aloud">Read back aloud</string>


</resources>
