<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.iruss.mogivisions.experiment.TriviaActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trialsRemaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trials Remaing: 1" />

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Button
                android:id="@+id/questionResponse1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="True"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/questionResponse2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FALSE"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/questionResponse3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/questionResponse4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="visible"
                />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
