...
        android:gravity="center"
        android:text="@string/time_left"
        android:textColor="@color/titletextcolor" />


    <Button
        android:id="@+id/unlockPhone"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_below= "@id/kioskTitle"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColor="@color/titletextcolor"
...
